demo1/yaml/app.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: demo1
---
apiVersion: v1
kind: Service
metadata:
  name: simple-rest-server-service
  namespace: demo1
  labels:
    app: simple-rest-server
  # # Use annotations based on your CSP
  #annotations:
  #  cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: simple-rest-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: http-port
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: simple-rest-server
  name: simple-rest-server-ingress
  # Use annotations based on your CSP
  #annotations:
    #kubernetes.io/ingress.class: "gce"
    #kubernetes.io/ingress.global-static-ip-name: "rest-server-api"
  namespace: demo1
spec:
  rules:
    - host: "REPLACE_WITH_HOSTNAME"
      http:
        paths:
          - backend:
              service:
                name: simple-rest-server-service
                port:
                  name: http
            path: /
            pathType: Prefix
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-rest-server
  namespace: demo1
  labels:
    app: simple-rest-server
spec:
  selector:
    matchLabels:
      app: simple-rest-server
  replicas: 1
  template:
    metadata:
      labels:
        app: simple-rest-server
    spec:
      serviceAccountName: simple-rest-server-sa
      containers:
        - name: server
          image: REPO_URL/simple-rest-server:0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8888
              name: http-port
              protocol: TCP
          resources:
            limits:
              cpu: 1500m
            requests:
              cpu: 1000m
          volumeMounts:
          - name: config
            mountPath: /app/application.properties
            subPath: application.properties
            readOnly: true
      volumes:
      - name: config
        configMap:
          name: simple-rest-server-configmap
